--- a/index.html
+++ b/index.html
@@ -1,168 +1,128 @@
-
-import React from 'react';
-import { MeetingMinutes } from '../types';
-
-interface MinutesDisplayProps {
-  minutes: MeetingMinutes;
-}
-
-const MinutesDisplay: React.FC<MinutesDisplayProps> = ({ minutes }) => {
-  const getSentimentColor = (sentiment?: string) => {
-    switch (sentiment) {
-      case 'Positive': return 'bg-green-100 text-green-800';
-      case 'Neutral': return 'bg-blue-100 text-blue-800';
-      case 'Mixed': return 'bg-yellow-100 text-yellow-800';
-      case 'Challenging': return 'bg-red-100 text-red-800';
-      default: return 'bg-slate-100 text-slate-800';
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Image → Styled Text Converter (Offline)</title>
+  <style>
+    body {
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      background: #f5f5f5;
+      margin: 0;
+      padding: 24px;
     }
-  };
+    .container {
+      max-width: 720px;
+      margin: auto;
+      background: #ffffff;
+      border-radius: 16px;
+      padding: 20px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.08);
+    }
+    h1 {
+      font-size: 20px;
+      margin-bottom: 16px;
+    }
+    input[type="file"] {
+      margin-bottom: 12px;
+    }
+    img {
+      max-width: 100%;
+      max-height: 260px;
+      border-radius: 12px;
+      border: 1px solid #ddd;
+      margin-bottom: 12px;
+    }
+    button {
+      background: #000;
+      color: #fff;
+      border: none;
+      padding: 10px 16px;
+      border-radius: 10px;
+      cursor: pointer;
+      margin-bottom: 12px;
+    }
+    button:disabled {
+      opacity: 0.5;
+      cursor: not-allowed;
+    }
+    textarea {
+      width: 100%;
+      height: 260px;
+      border-radius: 10px;
+      border: 1px solid #ddd;
+      padding: 12px;
+      font-family: monospace;
+      font-size: 13px;
+      resize: vertical;
+    }
+    .note {
+      font-size: 12px;
+      color: #666;
+      margin-top: 12px;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>Image → Styled Text Converter (Offline)</h1>
 
-  return (
-    <div className="space-y-8 animate-in fade-in slide-in-from-bottom-4 duration-700">
-      {/* Header Info */}
-      <div className="bg-white rounded-3xl p-8 shadow-sm border border-slate-100">
-        <div className="flex flex-col md:flex-row justify-between items-start md:items-center gap-4 mb-6">
-          <div>
-            <h1 className="text-3xl font-bold text-slate-900 leading-tight">{minutes.title}</h1>
-            <div className="flex flex-wrap gap-4 mt-3 text-slate-500">
-              <span className="flex items-center gap-1.5 text-sm font-medium">
-                <svg className="w-4 h-4 text-indigo-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"/></svg>
-                {minutes.date || new Date().toLocaleDateString()}
-              </span>
-              <span className="flex items-center gap-1.5 text-sm font-medium">
-                <svg className="w-4 h-4 text-indigo-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"/></svg>
-                {minutes.duration || 'N/A'}
-              </span>
-              {minutes.sentiment && (
-                <span className={`px-3 py-1 rounded-full text-xs font-bold uppercase tracking-wider ${getSentimentColor(minutes.sentiment)}`}>
-                  {minutes.sentiment} Tone
-                </span>
-              )}
-            </div>
-          </div>
-          <button 
-            onClick={() => window.print()}
-            className="flex-shrink-0 px-5 py-2.5 bg-white border border-slate-200 rounded-xl text-slate-600 hover:bg-slate-50 hover:border-slate-300 transition-all flex items-center gap-2 shadow-sm"
-          >
-            <svg className="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth="2" d="M17 17h2a2 2 0 002-2v-4a2 2 0 00-2-2H5a2 2 0 00-2 2v4a2 2 0 002 2h2m2 4h6a2 2 0 002-2v-4a2 2 0 00-2-2H9a2 2 0 00-2 2v4a2 2 0 002 2zm8-12V5a2 2 0 00-2-2H9a2 2 0 00-2 2v4h10z"/></svg>
-            <span className="font-semibold">Export PDF</span>
-          </button>
-        </div>
+    <input type="file" accept="image/*" id="imageInput" />
 
-        <div className="grid md:grid-cols-3 gap-8 pt-6 border-t border-slate-50">
-          <div className="md:col-span-1">
-            <h2 className="text-xs font-bold uppercase tracking-[0.15em] text-slate-400 mb-4">Attendees</h2>
-            <div className="flex flex-wrap gap-2">
-              {minutes.attendees && minutes.attendees.length > 0 ? (
-                minutes.attendees.map((a, i) => (
-                  <span key={i} className="px-3 py-1.5 bg-indigo-50/50 rounded-lg text-indigo-700 text-xs font-semibold border border-indigo-100/50">{a}</span>
-                ))
-              ) : (
-                <span className="text-slate-400 italic text-sm">No attendees identified</span>
-              )}
-            </div>
-          </div>
-          <div className="md:col-span-2">
-            <h2 className="text-xs font-bold uppercase tracking-[0.15em] text-slate-400 mb-4">Executive Summary</h2>
-            <p className="text-slate-600 leading-relaxed text-lg font-medium italic">"{minutes.summary}"</p>
-          </div>
-        </div>
-      </div>
-
-      <div className="grid lg:grid-cols-3 gap-8">
-        {/* Detailed Key Points & Decisions */}
-        <div className="lg:col-span-2 space-y-8">
-          <section className="bg-white rounded-3xl p-8 shadow-sm border border-slate-100">
-            <h2 className="text-2xl font-bold text-slate-900 mb-8 flex items-center gap-3">
-              <div className="w-10 h-10 rounded-xl bg-indigo-600 text-white flex items-center justify-center shadow-lg shadow-indigo-100">
-                <svg className="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2"/></svg>
-              </div>
-              Detailed Discussion Points
-            </h2>
-            <div className="space-y-8">
-              {minutes.keyPoints.map((point, i) => (
-                <div key={i} className="group flex gap-6 items-start relative pb-8 border-b border-slate-50 last:border-0 last:pb-0">
-                  <span className="flex-shrink-0 w-10 h-10 rounded-2xl bg-slate-50 text-slate-400 flex items-center justify-center text-sm font-bold border border-slate-100 group-hover:bg-indigo-50 group-hover:text-indigo-600 group-hover:border-indigo-100 transition-colors">
-                    {String(i + 1).padStart(2, '0')}
-                  </span>
-                  <div className="space-y-2">
-                    <p className="text-slate-700 leading-relaxed text-base font-medium">
-                      {point}
-                    </p>
-                  </div>
-                </div>
-              ))}
-            </div>
-          </section>
-
-          <section className="bg-slate-900 rounded-3xl p-8 shadow-xl text-white overflow-hidden relative">
-            <div className="absolute top-0 right-0 w-32 h-32 bg-indigo-500/10 rounded-full blur-3xl -mr-16 -mt-16"></div>
-            <h2 className="text-xl font-bold mb-6 flex items-center gap-3 relative z-10">
-              <div className="w-8 h-8 rounded-lg bg-indigo-500 text-white flex items-center justify-center">
-                <svg className="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth="2" d="M5 13l4 4L19 7"/></svg>
-              </div>
-              Formal Decisions
-            </h2>
-            <ul className="grid gap-4 relative z-10">
-              {minutes.decisions && minutes.decisions.length > 0 ? (
-                minutes.decisions.map((decision, i) => (
-                  <li key={i} className="flex items-start gap-4 bg-white/5 border border-white/10 p-5 rounded-2xl backdrop-blur-sm">
-                    <div className="mt-2 w-1.5 h-1.5 rounded-full bg-indigo-400 flex-shrink-0 shadow-[0_0_8px_rgba(129,140,248,0.8)]"></div>
-                    <p className="font-medium text-slate-100 leading-relaxed">{decision}</p>
-                  </li>
-                ))
-              ) : (
-                <p className="italic text-slate-400">No specific decisions were reached during this session.</p>
-              )}
-            </ul>
-          </section>
-        </div>
-
-        {/* Sidebar: Action Items */}
-        <div className="space-y-8">
-          <section className="bg-white rounded-3xl p-8 shadow-sm border border-slate-100 sticky top-24">
-            <h2 className="text-xl font-bold text-slate-900 mb-6 flex items-center gap-3">
-              <div className="w-9 h-9 rounded-xl bg-emerald-100 text-emerald-600 flex items-center justify-center">
-                <svg className="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"/></svg>
-              </div>
-              Next Actions
-            </h2>
-            <div className="space-y-4">
-              {minutes.actionItems.map((item, i) => (
-                <div key={i} className="p-5 rounded-2xl bg-slate-50/50 border border-slate-100 group hover:border-emerald-300 hover:bg-white transition-all duration-300 shadow-sm hover:shadow-md">
-                  <div className="flex items-start gap-3 mb-3">
-                    <div className="mt-1 flex-shrink-0 w-5 h-5 rounded-md border-2 border-slate-300 group-hover:border-emerald-500 transition-colors"></div>
-                    <p className="text-slate-800 font-bold leading-tight group-hover:text-emerald-700 transition-colors">{item.task}</p>
-                  </div>
-                  <div className="grid grid-cols-2 gap-2 text-xs font-bold uppercase tracking-wider text-slate-400">
-                    <div className="flex flex-col gap-1">
-                      <span className="text-[10px] text-slate-300">Owner</span>
-                      <span className="text-slate-600 truncate">{item.assignee || 'Unassigned'}</span>
-                    </div>
-                    <div className="flex flex-col gap-1">
-                      <span className="text-[10px] text-slate-300">Deadline</span>
-                      <span className="text-slate-600">{item.deadline || 'TBD'}</span>
-                    </div>
-                  </div>
-                </div>
-              ))}
-            </div>
-
-            {minutes.nextMeeting && (
-              <div className="mt-8 p-6 bg-gradient-to-br from-indigo-600 to-violet-700 rounded-2xl text-white shadow-lg shadow-indigo-100">
-                <p className="text-[10px] uppercase tracking-widest text-indigo-100 font-black mb-1 opacity-80">Follow-up Session</p>
-                <p className="font-bold text-lg leading-tight">{minutes.nextMeeting}</p>
-                <div className="mt-4 flex items-center gap-2 text-xs font-semibold text-indigo-100/80">
-                  <svg className="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"/></svg>
-                  Sync with Calendar
-                </div>
-              </div>
-            )}
-          </section>
-        </div>
-      </div>
+    <div>
+      <img id="preview" style="display:none" />
     </div>
-  );
-};
 
-export default MinutesDisplay;
+    <button id="extractBtn" disabled>Extract Text</button>
+
+    <textarea id="output" placeholder="Styled text output will appear here"></textarea>
+
+    <div class="note">
+      Formatting rules:<br />
+      Bold → *text*<br />
+      Italic → _text_<br />
+      Bold + Italic → _*text*_
+    </div>
+  </div>
+
+  <script>
+    const imageInput = document.getElementById('imageInput');
+    const preview = document.getElementById('preview');
+    const extractBtn = document.getElementById('extractBtn');
+    const output = document.getElementById('output');
+
+    imageInput.addEventListener('change', () => {
+      const file = imageInput.files[0];
+      if (!file) return;
+      preview.src = URL.createObjectURL(file);
+      preview.style.display = 'block';
+      extractBtn.disabled = false;
+    });
+
+    extractBtn.addEventListener('click', () => {
+      extractBtn.disabled = true;
+      extractBtn.textContent = 'Extracting…';
+
+      // MOCK OUTPUT — replace with real OCR when wiring backend
+      const mockedOutput = `_*No more toe pain during long hours of standing.*_
+
+That’s what *Closed-toe heels* are made for.
+
+They hold your foot in place, reduce pressure on your toes, and feel comfortable from morning meetings to evening plans.
+
+_Stylish enough for work._
+_Supportive enough for all day._
+
+Winter heels that don’t ask you to compromise.
+
+*Shop Closed-Toe Collection*`;
+
+      setTimeout(() => {
+        output.value = mockedOutput;
+        extractBtn.textContent = 'Extract Text';
+        extractBtn.disabled = false;
+      }, 700);
+    });
+  </script>
+</body>
+</html>
